--- a/escalade/escalade-batch/pom.xml
+++ b/escalade/escalade-batch/pom.xml
@@ -43,6 +43,31 @@
         </dependency>
 
         <!-- ===== Bibliothèques tierces ===== -->
+        <!-- Bibliothèques pour la gestion des logs -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jcl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-web</artifactId>
+        </dependency>
 
         <!-- Drivers JDBC PostgreSQL -->
         <dependency>
