--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -156,6 +156,13 @@
         <version>6.0.10.Final</version>
       </dependency>
 
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>2.0.1.Final</version>
+        <scope>compile</scope>
+      </dependency>
+
       <!-- spring -->
       <dependency>
         <groupId>org.springframework</groupId>
