--- a/escalade/escalade-consumer/pom.xml
+++ b/escalade/escalade-consumer/pom.xml
@@ -36,6 +36,10 @@
         </dependency>
 
         <!-- ===== Bibliothèques tierces ===== -->
+        <dependency>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
         <!-- Bibliothèques pour la gestion des logs -->
         <dependency>
             <groupId>commons-logging</groupId>
