--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -91,6 +91,12 @@
       </dependency>
 
       <!-- ===== Bibliothèques tierces ===== -->
+      <dependency>
+        <groupId>org.glassfish.hk2.external</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>2.5.0-b62</version>
+        <scope>compile</scope>
+      </dependency>
       <!-- Bibliothèques pour la gestion des logs -->
       <dependency>
         <groupId>commons-logging</groupId>
