Update project: escalade-consumer
data source -> ok
First test from BDD  -> ok

--- a/escalade/escalade-webapp/pom.xml
+++ b/escalade/escalade-webapp/pom.xml
@@ -51,6 +51,12 @@
 
         <!-- ===== Bibliothèques tierces ===== -->
 
+        <!-- JSR-250 -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+
         <!-- Drivers JDBC PostgreSQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
