--- a/escalade/escalade-consumer/pom.xml
+++ b/escalade/escalade-consumer/pom.xml
@@ -37,9 +37,20 @@
 
         <!-- ===== Bibliothèques tierces ===== -->
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
             <artifactId>javax.inject</artifactId>
         </dependency>
+
         <!-- Bibliothèques pour la gestion des logs -->
         <dependency>
             <groupId>commons-logging</groupId>
@@ -77,6 +88,7 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+
 
 
     </dependencies>
