--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -299,6 +299,20 @@
         <scope>test</scope>
       </dependency>
 
+      <!-- JSR-250 -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.2</version>
+      </dependency>
+
+      <!-- JSR-330 -->
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>1</version>
+      </dependency>
+
       <!-- Pool de Connexion Commons DBCP -->
       <dependency>
         <groupId>org.apache.commons</groupId>
