--- a/escalade/escalade-business/pom.xml
+++ b/escalade/escalade-business/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>javax.inject</artifactId>
         </dependency>
 
+        <!-- spring tx -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+
         <!-- ===== Tests ===== -->
         <dependency>
             <groupId>junit</groupId>
