preparation new function addUser
On model module:
- Bean BCryptPasswordEncoder added
On webapp module:
- NewUserController created
- All jsp update for new function accés

--- a/escalade/escalade-webapp/pom.xml
+++ b/escalade/escalade-webapp/pom.xml
@@ -218,6 +218,12 @@
             <version>${org.springframework.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
         <!-- ===== Tests ===== -->
         <dependency>
             <groupId>junit</groupId>
