--- a/escalade/escalade-model/pom.xml
+++ b/escalade/escalade-model/pom.xml
@@ -51,6 +51,19 @@
             <artifactId>log4j-web</artifactId>
         </dependency>
 
+        <!-- JSR-250 -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+
+        <!-- JSR-330 -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+
+
         <!-- ===== validation ===== -->
         <dependency>
             <groupId>javax.validation</groupId>
@@ -61,5 +74,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
     </dependencies>
 </project>
