--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -291,6 +291,18 @@
         <version>${org.springframework.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>5.1.4.RELEASE</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>4.3.11.RELEASE</version>
+      </dependency>
+
       <!-- Test -->
       <dependency>
         <groupId>junit</groupId>
