--- a/escalade/escalade-business/pom.xml
+++ b/escalade/escalade-business/pom.xml
@@ -84,6 +84,21 @@
             <artifactId>spring-tx</artifactId>
         </dependency>
 
+
+        <!-- Spring security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
         <!-- ===== Tests ===== -->
         <dependency>
             <groupId>junit</groupId>
