--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -34,7 +34,7 @@
   <!-- Propriétés -->
   <!-- =============================================================== -->
   <properties>
-    <projectName>Escalade</projectName>
+    <projectName>OC P6-Escalade par Bodelle nicolas</projectName>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
