Improvement on webapp
On webapp module:
- cleaning on searchSite.jsp and index.jsp
- minor update on pom.xml

README.md writed.

--- a/escalade/escalade-webapp/pom.xml
+++ b/escalade/escalade-webapp/pom.xml
@@ -230,22 +230,22 @@
     <build>
         <finalName>escalade-webapp</finalName>
 
-        <plugins>
-            <!-- ===== Packaging WAR ===== -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <webResources>
-                        <resource>
-                            <filtering>true</filtering>
-                            <directory>src/main/webapp</directory>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
+        <!--<plugins>-->
+            <!--&lt;!&ndash; ===== Packaging WAR ===== &ndash;&gt;-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-war-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<webResources>-->
+                        <!--<resource>-->
+                            <!--<filtering>true</filtering>-->
+                            <!--<directory>src/main/webapp</directory>-->
+                        <!--</resource>-->
+                    <!--</webResources>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
-        </plugins>
+        <!--</plugins>-->
     </build>
 
 </project>
